--- a/styles/apps/story-tags.css
+++ b/styles/apps/story-tags.css
@@ -3,6 +3,8 @@
 	max-width: 600px;
 	min-height: 250px;
 	border-radius: 0px;
+	overflow: hidden;
+	overflow: clip;
 
 	&:not(.minimized) {
 		outline: 2px solid var(--litm-color);
@@ -10,7 +12,8 @@
 	}
 
 	& .window-header {
-		background: url(../../assets/media/origin-theme-alt-bg-top.webp) no-repeat bottom / cover;
+		background: url(../../assets/media/origin-theme-alt-bg-top.webp) no-repeat
+			bottom / cover;
 		padding-block-end: var(--litm-space-4);
 		flex-wrap: nowrap;
 		align-items: baseline;
@@ -22,12 +25,13 @@
 		}
 	}
 
-	& .window-content {
-		overflow: visible;
-	}
-
 	& form {
-		position: relative
+		position: relative;
+		overflow: hidden;
+		overflow: clip;
+		display: grid;
+		grid-template-rows: auto 1fr auto;
+		height: 100%;
 	}
 
 	& fieldset {
@@ -40,6 +44,7 @@
 		display: flex;
 		flex-direction: column;
 		margin-block-start: var(--litm-space-2);
+		overflow-y: auto;
 
 		&:last-of-type {
 			height: 100%;
@@ -49,7 +54,8 @@
 	& hr {
 		border: none;
 		min-height: 16px;
-		background: url(../../assets/media/separator.webp) no-repeat center / contain;
+		background: url(../../assets/media/separator.webp) no-repeat center /
+			contain;
 		width: 95%;
 	}
 
@@ -69,7 +75,8 @@
 				flex: 1 0 auto;
 				margin-inline-start: -2px;
 				padding: 0.4em 20px 0.4em 6px;
-				background: url(../../assets/media/section-bg.webp) no-repeat center / auto;
+				background: url(../../assets/media/section-bg.webp) no-repeat center /
+					auto;
 				background-position: left;
 				background-size: cover;
 				color: var(--litm-color-primary-bg);
@@ -77,7 +84,7 @@
 				line-height: var(--font-size-16);
 
 				& img {
-					aspect-ratio: 1/1;
+					aspect-ratio: 1 / 1;
 					max-width: 25px;
 					flex: none;
 				}
@@ -135,7 +142,7 @@
 				& .litm--active-label {
 					font-size: var(--font-size-11);
 					line-height: 1;
-					color: var(--litm-color-weakness)
+					color: var(--litm-color-weakness);
 				}
 
 				& .litm--tag-item-status {
@@ -176,7 +183,7 @@
 		padding: var(--litm-space-3);
 
 		& img {
-			aspect-ratio: 1/1;
+			aspect-ratio: 1 / 1;
 			max-width: 75px;
 			margin-inline: auto;
 		}
