--- a/styles/root.css
+++ b/styles/root.css
@@ -15,7 +15,11 @@ body {
 	--litm-color-accent: hsl(46.61 81.44% 92.99%);
 	--litm-color-accent-2: hsl(24deg 20.72% 43.81%);
 	--litm-color-accent-3: hsl(17, 84%, 31%);
-	--litm-color-primary-bg: color-mix(in hsl, var(--litm-color-accent) 75%, hsl(0 0% 100%));
+	--litm-color-primary-bg: color-mix(
+		in hsl,
+		var(--litm-color-accent) 75%,
+		hsl(0 0% 100%)
+	);
 	--litm-color-primary: color-mix(in hsl, var(--litm-color) 75%, hsl(0 0% 0%));
 	--litm-color-row-odd: rgb(0, 0, 0, 0.1);
 	--litm-color-weakness: hsl(10 41.04% 26.41%);
@@ -26,10 +30,13 @@ body {
 	--litm-color-limit-bg: hsl(0 67.35% 63.41% / 70%);
 
 	/* Fonts */
-	--litm-font-heading: PackardAntique, CaslonAntique, 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
-	--litm-font-primary: CaslonAntique, LibreCaslonText, 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
-	--litm-font-accent: AlchemyItalic, 'Brush Script MT', 'Bradley Hand ITC', 'Lucida Calligraphy', 'Lucida Handwriting', 'Apple Chancery', cursive;
-	--litm-font-text: Fraunces, LibreCaslonText, 'Book Antiqua', Palatino, serif;
+	--litm-font-heading: PackardAntique, CaslonAntique, "Palatino Linotype",
+		"Book Antiqua", Palatino, serif;
+	--litm-font-primary: CaslonAntique, LibreCaslonText, "Palatino Linotype",
+		"Book Antiqua", Palatino, serif;
+	--litm-font-accent: AlchemyItalic, "Brush Script MT", "Bradley Hand ITC",
+		"Lucida Calligraphy", "Lucida Handwriting", "Apple Chancery", cursive;
+	--litm-font-text: Fraunces, LibreCaslonText, "Book Antiqua", Palatino, serif;
 	--litm-font-sc: PowellAntique, PackardAntique, Palatino, serif;
 
 	/* Vertical spacing */
@@ -41,7 +48,8 @@ body {
 
 	/* Foundry Overrides */
 	--font-size-26: 1.625rem;
-	--font-primary: Fraunces, BespokeSans, Lato, 'PackardAntique', 'Open Sans', sans-serif;
+	--font-primary: Fraunces, BespokeSans, Lato, "PackardAntique", "Open Sans",
+		sans-serif;
 	--color-text-light-1: var(--litm-color-accent);
 	--color-shadow-primary: var(--litm-color-primary);
 	--color-shadow-highlight: var(--litm-color-accent-bg);
@@ -52,7 +60,6 @@ body {
 	--color-level-error: rgba(105, 0, 8, 0.8);
 	--color-level-warning: rgba(214, 150, 0, 0.8);
 }
-
 
 /* DANGER AREA */
 /* TODO: Find a better way to override styles like this */
@@ -96,7 +103,6 @@ button,
 	& .message-header {
 		color: color-mix(in hsl, var(--litm-color-accent) 70%, transparent);
 	}
-
 }
 
 /* Custom content links */
@@ -125,7 +131,9 @@ a.content-link {
 #logo {
 	object-fit: contain;
 	object-position: top;
-	filter: drop-shadow(0px 0px 3px color-mix(in hsl, var(--litm-color-bg) 60%, transparent));
+	filter: drop-shadow(
+		0px 0px 3px color-mix(in hsl, var(--litm-color-bg) 60%, transparent)
+	);
 	margin-inline: 16px;
 	image-rendering: -webkit-optimize-contrast;
 }
@@ -170,7 +178,6 @@ a.content-link {
 aside[role="tooltip"] {
 	font-size: var(--font-size-14);
 
-
 	& a.content-link {
 		color: var(--litm-color-accent);
 
@@ -190,7 +197,7 @@ aside[role="tooltip"] {
 /* App core style overrides */
 
 .app.litm {
-	background: url('../assets/media/background.webp') no-repeat left / cover;
+	background: url("../assets/media/background.webp") no-repeat left / cover;
 	box-shadow: none;
 	filter: drop-shadow(rgb(0, 0, 0, 0.6) 2px 4px 8px);
 
@@ -251,11 +258,11 @@ aside[role="tooltip"] {
 	& .window-content {
 		padding: 0px;
 		background: none;
+	}
 
-		& form {
-			display: flex;
-			flex-direction: column;
-		}
+	& form {
+		display: flex;
+		flex-direction: column;
 	}
 
 	& .editor {
